fix(html): Fix details on html

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <h1 class="uk-heading-medium uk-text-center">Welcome!</h1>
     <h3 id="start-message" class="uk-text-center">Please connect your metamask
       account to begin.</h3>
-    <img src="./metamask.svg" class="uk-align-center" />
+    <img src="./images/metamask.svg" class="uk-align-center" />
     <button id="connect-button" class="uk-button uk-button-primary uk-align-center">Connect</button>
   </div>
 
@@ -84,7 +84,7 @@
     </ul>
   </div>
 
-  <script src=" main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
